[package]
name = "pricing_interface"
version = "0.1.0"
authors = ["Nicholas Daultry Ball <nicholas.daultry@gmail.com>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
options_pricing = {path = "../options_pricing"}
